I still need to re add the classes

--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
     </div>
     <div class="row">
       <div class="col-md-3">
-        <h1>[YOUR NAME]</h1>
+        <h1>Richard Ellis</h1>
       </div>
       <div class="col-md-9">
-        <h3>[YOUR STORY]</h3>
+        <h3 class="red">All the planets were aligned when I was born, thats how I have lived for so long, my end will come when the planets align again. That day will be mark by the blood of thousands at my feet. The innocent will all be gone. No better day the reach my seemingly never ending life then the last day for mankind. at least I will have company in my final hours and where Im going, It will be a fun ride.</h3>
+
+        <h3 class="green">Hi my name is Richard and I love making short storiesand/or monologues for random things. I generally just work and do this, I like this because I really want to learn to make apps and games.</h3>
+        
+        <h3 class="topsecret"><strong>!!!TOP SECRET!!!</strong></h3>
       </div>
     </div>
   </div>
